# internal/api/restapi/operations/authentication/post_v1_bomond_vn_auth_logout_parameters.go
@@ -31,7 +31,7 @@ type PostV1BomondVnAuthLogoutParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*
+	/*JWT token for authorization
 	  Required: true
 	  In: header
 	*/
