# internal/api/restapi/operations/courts/delete_v1_bomond_vn_court_id_book_book_id_parameters.go
@@ -11,6 +11,7 @@ import (
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
 )
 
 // NewDeleteV1BomondVnCourtIDBookBookIDParams creates a new DeleteV1BomondVnCourtIDBookBookIDParams object
@@ -30,6 +31,11 @@ type DeleteV1BomondVnCourtIDBookBookIDParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
+	/*JWT token for authorization
+	  Required: true
+	  In: header
+	*/
+	Authorization string
 	/*
 	  Required: true
 	  In: path
@@ -51,6 +57,10 @@ func (o *DeleteV1BomondVnCourtIDBookBookIDParams) BindRequest(r *http.Request, r
 
 	o.HTTPRequest = r
 
+	if err := o.bindAuthorization(r.Header[http.CanonicalHeaderKey("Authorization")], true, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
 	rBookID, rhkBookID, _ := route.Params.GetOK("book_id")
 	if err := o.bindBookID(rBookID, rhkBookID, route.Formats); err != nil {
 		res = append(res, err)
@@ -63,6 +73,26 @@ func (o *DeleteV1BomondVnCourtIDBookBookIDParams) BindRequest(r *http.Request, r
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+// bindAuthorization binds and validates parameter Authorization from header.
+func (o *DeleteV1BomondVnCourtIDBookBookIDParams) bindAuthorization(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("Authorization", "header", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+
+	if err := validate.RequiredString("Authorization", "header", raw); err != nil {
+		return err
+	}
+	o.Authorization = raw
+
 	return nil
 }
 
