# internal/api/restapi/operations/courts/post_v1_bomond_vn_court_id_book_parameters.go
@@ -33,6 +33,11 @@ type PostV1BomondVnCourtIDBookParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
+	/*JWT token for authorization
+	  Required: true
+	  In: header
+	*/
+	Authorization string
 	/*
 	  Required: true
 	  In: body
@@ -53,6 +58,10 @@ func (o *PostV1BomondVnCourtIDBookParams) BindRequest(r *http.Request, route *mi
 	var res []error
 
 	o.HTTPRequest = r
+
+	if err := o.bindAuthorization(r.Header[http.CanonicalHeaderKey("Authorization")], true, route.Formats); err != nil {
+		res = append(res, err)
+	}
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
@@ -89,6 +98,26 @@ func (o *PostV1BomondVnCourtIDBookParams) BindRequest(r *http.Request, route *mi
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+// bindAuthorization binds and validates parameter Authorization from header.
+func (o *PostV1BomondVnCourtIDBookParams) bindAuthorization(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("Authorization", "header", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+
+	if err := validate.RequiredString("Authorization", "header", raw); err != nil {
+		return err
+	}
+	o.Authorization = raw
+
 	return nil
 }
 
