# swagger/swagger.yaml
@@ -18,7 +18,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Authentication
 
@@ -37,7 +36,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Authentication
 
@@ -56,7 +54,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Authentication
 
@@ -65,6 +62,7 @@ paths:
       produces:
         - application/json
       parameters:
+        - $ref: '#/parameters/Authorization'
         - $ref: '#/parameters/UserId'
       responses:
         '200':
@@ -75,7 +73,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Users
 
@@ -83,6 +80,7 @@ paths:
       produces:
         - application/json
       parameters:
+        - $ref: '#/parameters/Authorization'
         - $ref: '#/parameters/UserId'
         - $ref: '#/parameters/UserUpdate'
       responses:
@@ -94,7 +92,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Users
 
@@ -102,6 +99,7 @@ paths:
       produces:
         - application/json
       parameters:
+        - $ref: '#/parameters/Authorization'
         - $ref: '#/parameters/UserId'
       responses:
         '200':
@@ -112,7 +110,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Users
 
@@ -120,6 +117,8 @@ paths:
     get:
       produces:
         - application/json
+      parameters:
+        - $ref: '#/parameters/Authorization'
       responses:
         '200':
           description: Courts list retrieved
@@ -129,7 +128,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Courts
 
@@ -138,6 +136,7 @@ paths:
       produces:
         - application/json
       parameters:
+        - $ref: '#/parameters/Authorization'
         - $ref: '#/parameters/CourtId'
         - $ref: '#/parameters/BookingRequest'
       responses:
@@ -149,7 +148,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Courts
 
@@ -157,6 +155,7 @@ paths:
       produces:
         - application/json
       parameters:
+        - $ref: '#/parameters/Authorization'
         - $ref: '#/parameters/CourtId'
       responses:
         '200':
@@ -167,7 +166,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Courts
 
@@ -176,6 +174,7 @@ paths:
       produces:
         - application/json
       parameters:
+        - $ref: '#/parameters/Authorization'
         - $ref: '#/parameters/CourtId'
         - $ref: '#/parameters/BookingId'
       responses:
@@ -187,7 +186,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/ErrorResult'
-      deprecated: false
       tags:
         - Courts
 
@@ -197,6 +195,7 @@ parameters:
     in: header
     type: string
     required: true
+    description: JWT token for authorization
 
   UserSignup:
     name: userSignup
